# Sourcetrail-QtCreator

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Sourcetrail.json.in  run-clang-tidy-fix.sh  vcpkg.json
projects/: QtCreator-SourcetrailPlugin.srctrlprj  Sourcetrail-QtCreatorPlugin-System-Linux.srctrlprj  Sourcetrail-QtCreatorPlugin-Vcpkg-Linux.srctrlprj
src/: sourcetrail_global.h  sourcetrailconstants.h  sourcetrailplugin.cpp  sourcetrailplugin.h  sourcetrailpluginsettings.cpp  sourcetrailpluginsettings.h  sourcetrailpluginsettingspage.cpp  sourcetrailpluginsettingspage.h  sourcetrailpluginsettingspage.ui
